@@ -11,19 +11,20 @@ just Java and a model file.
 
 ## Download a Model
 
-Before running the bot, download a GGUF model. You can use jlama's built-in
-CLI:
+Before running the bot, download a model using the included jlama CLI:
 
 ```bash
-mvn compile exec:java \
-  -Dexec.mainClass="com.github.tjake.jlama.cli.JlamaCli" \
+mvn compile exec:java@download-model \
   -Dexec.args="download tjake/Llama-3.2-1B-Instruct-JQ4"
 ```
 
-This downloads the model to `~/.jlama/models/`.
+This downloads the model to `./models/` in the project directory.
 
-Alternatively, download models manually from 
-[HuggingFace](https://huggingface.co/models?library=gguf).
+### Alternative: Manual download
+
+Download directly from 
+[HuggingFace](https://huggingface.co/tjake/Llama-3.2-1B-Instruct-JQ4/tree/main)
+and place all files in a directory like `./models/Llama-3.2-1B-Instruct-JQ4/`.
 
 ## Build
 
@@ -33,14 +34,27 @@ mvn clean compile
 
 ## Run
 
+The easiest way to run is via the test:
+
 ```bash
-mvn exec:java -Dexec.args="~/.jlama/models/Llama-3.2-1B-Instruct-JQ4"
+mvn test -Dtest=ChatTest
+```
+
+This loads the model and asks "What is 2+2?", printing the response.
+
+### Interactive Mode (requires JVM setup)
+
+For interactive mode, you need to pass JVM arguments for the Vector API:
+
+```bash
+MAVEN_OPTS="--add-modules jdk.incubator.vector --enable-native-access=ALL-UNNAMED" \
+  mvn exec:java -Dexec.args="models/tjake_Llama-3.2-1B-Instruct-JQ4"
 ```
 
 Then interact with the bot:
 
 ```
-Loading model from: /Users/you/.jlama/models/Llama-3.2-1B-Instruct-JQ4
+Loading model from: models/tjake_Llama-3.2-1B-Instruct-JQ4
 Model loaded. Type 'exit' to quit.
 
 You: What is the capital of France?
@@ -60,13 +74,25 @@ src/main/java/com/vzurauskas/prototypes/llmbot/
 
 ## How It Works
 
-1. `Chat` loads a GGUF model using jlama's `ModelSupport.loadModel()`
+1. `Chat` loads a SafeTensors model using jlama's `ModelSupport.loadModel()`
 2. `LlmBot` creates a `Chat` instance and runs an interactive loop
 3. User input is sent to the model via `chat.send(message)`
 4. The model generates a response token-by-token
 
+## Platform Notes
+
+The pom.xml includes `jlama-native` with the `osx-aarch_64` classifier for 
+Apple Silicon Macs. For other platforms, change the classifier:
+
+| Platform | Classifier |
+|----------|------------|
+| macOS ARM (M1/M2/M3) | `osx-aarch_64` |
+| macOS Intel | `osx-x86_64` |
+| Linux x64 | `linux-x86_64` |
+| Windows x64 | `windows-x86_64` |
+
 ## Performance Notes
 
-- jlama uses Java's Vector API for SIMD acceleration (best on Java 21+)
+- jlama uses native SIMD operations when the native library is loaded
 - Quantized models (Q4, Q5) run faster and use less memory
 - First response may be slower due to model warm-up
